ajout de couleur vert et bleu pour Pageweb.html

--- a/Pageweb.html
+++ b/Pageweb.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+        color: red;
+}
+h1 {
+        color: #00FF00;
+}
+p {
+        color: rgb(0,0,255)
+}
+</style>
+</head>
 <body>
 <h1>Activité2</h1>
 <p>git et github</p>
